# litocate

./: README.md  pyproject.toml
litocate/data/: README.md  acl.py  base.py  constant.py  pubmed.py  utils.py
litocate/llm/: filter.py  prompts.py
notebooks/: EDA.ipynb
scripts/: download.py  filter.py
tests/: test_acl.py  test_base.py  test_data_utils.py  test_pubmed.py
tests/data/: PMC10034384.xml  PMC9671157.xml
